# termreader

./: .gitignore  .ignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  asd.json  books.json  default.nix  history.json  issues.md  sample_book - Copy.txt
old/: Cargo.toml
old/src/: appstate.rs  commands.rs  helpers.rs  main.rs
old/src/reader/: mod.rs
old/src/state/: channels.rs  screen.rs
old/src/ui/: controls.rs  reader.rs
old/src/ui/mainscreen/: bookoptions.rs  main.rs  mod.rs  sourceoptions.rs
src/: appstate.rs  commands.rs  helpers.rs  logging.rs  main.rs  shutdown.rs  startup.rs
src/global/sources/: freewebnovel.rs  madara.rs  mod.rs  source_data.rs
src/local/: mod.rs
src/reader/: buffer.rs  mod.rs  widget.rs
src/state/: book_info.rs  buffer.rs  channels.rs  library.rs  mod.rs  screen.rs
src/ui/: controls.rs  helpers.rs  main.rs  mod.rs  reader.rs
src/ui/mainscreen/: bookoptions.rs  main.rs  mod.rs  sourceoptions.rs
termreader-core/: Cargo.toml
termreader-core/src/: book.rs  books_context.rs  history.rs  id.rs  lib.rs  library.rs  save.rs  sources.rs  updates.rs
termreader-sources/: Cargo.toml
termreader-sources/src/: chapter.rs  lib.rs  novel.rs
termreader-sources/src/sources/: freewebnovel.rs  madara.rs  mod.rs
termreader-term/: Cargo.toml
termreader-term/src/: appstate.rs  commands.rs  controls.rs  enter.rs  helpers.rs  logging.rs  main.rs  setup.rs  startup.rs
termreader-term/src/reader/: buffer.rs  mod.rs
termreader-term/src/state/: book_info.rs  buffer.rs  channels.rs  config.rs  history.rs  library.rs  menu.rs  mod.rs  reader.rs  sources.rs  updates.rs
termreader-term/src/ui/: controls.rs  history.rs  library.rs  mod.rs  reader.rs  sources.rs  updates.rs
termreader-term/src/ui/mainscreen/: bookoptions.rs  main.rs  sourceoptions.rs
