[package]
name = "termreader"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy S <Jeremy@jsmoog.com>"]
description = "A CLI ebook reader and converter"
readme = "README.md"
repository = "https://github.com/JMoogs/rreader"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
directories = "5.0.1"
lazy_static = "1.4.0"
ratatui = "0.23.0"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
sha256 = "1.4.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
