[workspace]
resolver = "2"
members = [
  "termreader-sources",  
  "termreader-term",
  "termreader-core"
]

[workspace.package]
name = "termreader"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy S <Jeremy@jsmoog.com>"]
description = "A CLI ebook reader and converter"
readme = "README.md"
repository = "https://github.com/JMoogs/termreader"
license = "MIT OR Apache-2.0"
