[package]
name = "termreader-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termreader-sources = { path = "../termreader-sources" }
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
anyhow = "1.0.75"
directories = "5.0.1"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sha256 = "1.4.0"
