[package]
name = "termreader-sources"
description = "Termreader's sources"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
anyhow = "1.0.75"
html5ever = "0.26.0"
regex = "1.10.2"
scraper = "0.18.1"
serde = { version = "1.0.188", features = ["derive"]}
reqwest = { version = "0.11.22", features = ["blocking", "multipart", "rustls-tls"]}
