[package]
name = "termreader-term"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "termreader"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termreader-sources = { path = "../termreader-sources" }
termreader-core = { path = "../termreader-core" }
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = { version = "0.27.0", features = ["serde", "unstable-rendered-line-info"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha256 = "1.4.0"
directories = "5.0.1"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
chrono = "0.4.31"
regex = "1.10.2"
thiserror = "1.0.58"
open = "5.3.0"
